src/test/resources/amyc/typer/failing/ComparisonError.amy
object ComparisonError
  1 <= true
end ComparisonError
